--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,10 +14,10 @@ jobs:
     - name: 📥 Checkout code
       uses: actions/checkout@v4
       
-    - name: 🏷️ Extract version from Index.html
+    - name: 🏷️ Extract version from index.html
       id: version
       run: |
-        VERSION=$(grep -o 'app-version">[^<]*' Index.html | sed 's/app-version">//')
+        VERSION=$(grep -o 'app-version">[^<]*' index.html | sed 's/app-version">//')
         echo "version=$VERSION" >> $GITHUB_OUTPUT
         echo "🏷️ Detected version: $VERSION"
         
